@@ -4,6 +4,9 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.MDC;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
@@ -18,23 +21,46 @@ import java.util.UUID;
  * 为每个 HTTP 请求生成唯一的 traceId，放入 MDC 中以贯穿整个请求链路的日志输出。
  * 同时将 traceId 写入响应头 X-Trace-Id，方便前端和调试使用。
  */
+@Slf4j
 @Component
 @Order(Ordered.HIGHEST_PRECEDENCE)
 public class TraceIdFilter extends OncePerRequestFilter {
 
     public static final String TRACE_ID_KEY = "traceId";
     public static final String TRACE_ID_HEADER = "X-Trace-Id";
+    private static final String UNKNOWN_IP = "unknown";
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
+        long startTime = System.currentTimeMillis();
+        boolean logRequest = shouldLogRequest(request);
+        Exception failure = null;
+
         try {
             String traceId = extractOrGenerateTraceId(request);
             MDC.put(TRACE_ID_KEY, traceId);
             response.setHeader(TRACE_ID_HEADER, traceId);
+
+            if (logRequest) {
+                log.info("HTTP接口调用开始 method={} uri={} clientIp={}",
+                        request.getMethod(), request.getRequestURI(), getClientIp(request));
+            }
+
             filterChain.doFilter(request, response);
+        } catch (ServletException | IOException | RuntimeException ex) {
+            failure = ex;
+            throw ex;
         } finally {
+            if (logRequest) {
+                log.info("HTTP接口调用结束 method={} uri={} status={} cost={}ms{}",
+                        request.getMethod(),
+                        request.getRequestURI(),
+                        response.getStatus(),
+                        System.currentTimeMillis() - startTime,
+                        ObjectUtils.isNotEmpty(failure) ? " error=" + failure.getClass().getSimpleName() : "");
+            }
             MDC.remove(TRACE_ID_KEY);
         }
     }
@@ -44,7 +70,7 @@ public class TraceIdFilter extends OncePerRequestFilter {
      */
     private String extractOrGenerateTraceId(HttpServletRequest request) {
         String traceId = request.getHeader(TRACE_ID_HEADER);
-        if (traceId == null || traceId.isBlank()) {
+        if (StringUtils.isBlank(traceId)) {
             traceId = generateTraceId();
         }
         return traceId;
@@ -52,5 +78,27 @@ public class TraceIdFilter extends OncePerRequestFilter {
 
     private String generateTraceId() {
         return UUID.randomUUID().toString().replace("-", "").substring(0, 16);
+    }
+
+    private boolean shouldLogRequest(HttpServletRequest request) {
+        return StringUtils.startsWith(request.getRequestURI(), "/api/");
+    }
+
+    private String getClientIp(HttpServletRequest request) {
+        String ip = request.getHeader("X-Forwarded-For");
+        if (isValidClientIp(ip)) {
+            return StringUtils.substringBefore(ip, ",").trim();
+        }
+
+        ip = request.getHeader("X-Real-IP");
+        if (isValidClientIp(ip)) {
+            return ip;
+        }
+
+        return request.getRemoteAddr();
+    }
+
+    private boolean isValidClientIp(String ip) {
+        return StringUtils.isNotBlank(ip) && !StringUtils.equalsIgnoreCase(UNKNOWN_IP, ip);
     }
 }
